working on force connection